@@ -19,7 +19,7 @@ Build-Depends: ant (>= 1.8),
                javahelper,
                junit4,
                libantlr-java,
-               libasm3-java,
+               libasm4-java,
                libbcpg-java,
                libbcprov-java,
                libclassycle-java,
@@ -116,7 +116,7 @@ Architecture: all
 Depends: ant,
          groovy (>= 1.8),
          ivy,
-         libasm3-java,
+         libasm4-java,
          libcommons-codec-java,
          libcommons-collections3-java,
          libcommons-io-java,
