@@ -72,16 +72,17 @@ Last-Update: 2012-08-18
      compile "org.pegdown:pegdown:1.1.0"
 --- a/gradle/dependencies.gradle
 +++ b/gradle/dependencies.gradle
-@@ -25,7 +25,7 @@
+@@ -25,16 +25,16 @@
      dependency 'org.apache.ant:ant-launcher:1.8.4@jar'
  }
  
 -libraries.asm =  'org.ow2.asm:asm-all:4.0@jar'
-+libraries.asm =  'asm:asm3-all:3.0@jar'
++libraries.asm =  'asm:asm4-all:4.1@jar'
  libraries.commons_cli = 'commons-cli:commons-cli:1.2@jar'
  libraries.commons_io = dependencies.module(versions.commons_io)
  libraries.commons_lang = 'commons-lang:commons-lang:2.6@jar'
-@@ -33,8 +33,8 @@
+-libraries.commons_collections = 'commons-collections:commons-collections:3.2.1@jar'
++libraries.commons_collections = 'commons-collections:commons-collections3:3.2.1@jar'
  libraries.ivy = dependencies.module('org.apache.ivy:ivy:2.2.0'){
      dependency "com.jcraft:jsch:0.1.46"
  }
@@ -92,15 +93,76 @@ Last-Update: 2012-08-18
  
  // Logging
  libraries.slf4j_api = 'org.slf4j:slf4j-api:1.6.6@jar'
-@@ -84,7 +84,7 @@
+@@ -54,7 +54,7 @@
+ }
+ 
+ // Jetty
+-libraries.servlet_api = "org.mortbay.jetty:servlet-api:2.5-20081211@jar"
++libraries.servlet_api = "javax.servlet:servlet-api:2.5@jar"
+ libraries.jetty_util = dependencies.module("org.mortbay.jetty:jetty-util:6.1.25") {
+     dependency libraries.slf4j_api
+     dependency libraries.servlet_api
+@@ -84,23 +84,25 @@
          jsr305: 'com.google.code.findbugs:jsr305:1.3.9',
          groovy: 'org.codehaus.groovy:groovy-all:1.8.6@jar',
          jaxen: 'jaxen:jaxen:1.1@jar',
 -        jcip: "net.jcip:jcip-annotations:1.0",
 +        jcip: "net.jcip:jcip:debian",
          jna: 'net.java.dev.jna:jna:3.2.7@jar',
-         junit: 'junit:junit:4.10',
+-        junit: 'junit:junit:4.10',
++        junit: 'junit:junit4:4.10',
          xmlunit: 'xmlunit:xmlunit:1.3',
+-        nekohtml: 'net.sourceforge.nekohtml:nekohtml:1.9.14',
++        nekohtml: dependencies.module('net.sourceforge.nekohtml:nekohtml:1.9.14') {
++		dependency "xerces:xercesImpl:debian@jar"
++	},
+         xbean: 'org.apache.xbean:xbean-reflect:3.4@jar', //required by maven3 classes
+         nativePlatform: 'net.rubygrapefruit:native-platform:0.2'
+ ]
+ 
+-libraries.maven3 = dependencies.module("org.apache.maven:maven-core:3.0.4") {
+-    dependency "org.apache.maven:maven-settings:3.0.4@jar"
+-    dependency "org.apache.maven:maven-settings-builder:3.0.4@jar"
++libraries.maven3 = dependencies.module("org.apache.maven:maven-core:3.x") {
++    dependency "org.apache.maven:maven-settings:3.x@jar"
++    dependency "org.apache.maven:maven-settings-builder:3.x@jar"
+ 
+     //plexus:
+-    dependency "org.codehaus.plexus:plexus-utils:2.0.6@jar"
++    dependency "org.codehaus.plexus:plexus-utils2:debian@jar"
+     dependency "org.codehaus.plexus:plexus-interpolation:1.14@jar"
+-    dependency "org.codehaus.plexus:plexus-component-annotations:1.5.5@jar"
++    dependency "org.codehaus.plexus:plexus-component-annotations-1.5:debian@jar"
+     dependency "org.codehaus.plexus:plexus-container-default:1.5.5@jar"
+     dependency "org.codehaus.plexus:plexus-classworlds:2.4@jar"
+ 
+@@ -109,17 +111,17 @@
+     dependency "org.sonatype.plexus:plexus-sec-dispatcher:1.3@jar"
+ 
+     //core:
+-    dependency "org.apache.maven:maven-core:3.0.4@jar"
+-    dependency "org.apache.maven:maven-model-builder:3.0.4@jar"
+-    dependency "org.apache.maven:maven-model:3.0.4@jar"
++    dependency "org.apache.maven:maven-core:3.x@jar"
++    dependency "org.apache.maven:maven-model-builder:3.x@jar"
++    dependency "org.apache.maven:maven-model:3.x@jar"
+ 
+     //somewhat core:
+-    dependency "org.apache.maven:maven-artifact:3.0.4@jar"
+-    dependency "org.apache.maven:maven-compat:3.0.4@jar"
+-    dependency "org.apache.maven:maven-repository-metadata:3.0.4@jar"
+-    dependency "org.apache.maven:maven-plugin-api:3.0.4@jar"
+-    dependency "org.apache.maven:maven-aether-provider:3.0.4@jar"
+-    dependency "org.apache.maven.wagon:wagon-provider-api:2.2@jar"
++    dependency "org.apache.maven:maven-artifact:3.x@jar"
++    dependency "org.apache.maven:maven-compat:3.x@jar"
++    dependency "org.apache.maven:maven-repository-metadata:3.x@jar"
++    dependency "org.apache.maven:maven-plugin-api:3.x@jar"
++    dependency "org.apache.maven:maven-aether-provider:3.x@jar"
++    dependency "org.apache.maven.wagon:wagon-provider-api:2.x@jar"
+ 
+     //eather:
+     dependency "org.sonatype.aether:aether-api:1.13.1@jar"
 --- a/subprojects/core/core.gradle
 +++ b/subprojects/core/core.gradle
 @@ -57,7 +57,7 @@
