@@ -1,6 +1,7 @@
 gradle (1.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * d/control: Build-Depends on libasm4-java instead of libasm3-java.
 
  -- Damien Raude-Morvan <drazzib@debian.org>  Fri, 04 Jan 2013 00:13:00 +0100
 
